<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/resign_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/green"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        toolbar:navigationIcon="@drawable/back">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="用户注册"
            android:textSize="22dp"
            android:textColor="@color/lightgreen"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/lingray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/darkgray"
                android:text="@string/account"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/resign_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/darkgray"
                android:textColorHint="@color/lightgray"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:background="@null"
                android:hint="@string/acconttips"
                android:inputType="" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="1dp"
            android:background="@color/lingray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/password"
                android:textColor="@color/darkgray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/resign_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:textSize="14sp"
                android:hint="@string/pwdtip"
                android:textColor="@color/darkgray"
                android:textColorHint="@color/lightgray"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"/>

    <Button
        android:id="@+id/resign_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/botton_shape"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="@color/lightgreen"
        android:text="@string/signin" />




</LinearLayout>